--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./Crypto Wallet.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="Your mini wallet" />
+    <meta name="description" content="Your crypto portfolio" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="viewport"
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Wallet</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
